# shafika

./: .dockerignore  .env.example  .gitignore  MIGRATION_QUICKSTART.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: docker.yml  lint.yml  test.yml
alembic/: README_ALEMBIC.md  env.py
db/: schema.sql
db/migrations/: README.md
db/models/: models.py
libs/common/: README.md  pyproject.toml
libs/common/src/common/: db.py  dex.py  failedjob.py  nft.py  queue.py  token.py
scripts/: generate_admin_api_key.py  init_db.py  migrate.py  run_migration.py
services/api/: Dockerfile  gunicorn.conf.py  pyproject.toml
services/api/src/api/: __main__.py  middleware.py  server.py
services/block-poller/: Dockerfile  pyproject.toml
services/block-poller/src/blockpoller/: __main__.py  blockpoller.py
services/block-processor/: Dockerfile  pyproject.toml
services/block-processor/src/blockprocessor/: __main__.py  processor.py
services/log-poller/: Dockerfile  pyproject.toml
services/log-poller/src/logpoller/: __main__.py  logpoller.py
services/log-processor/: Dockerfile  pyproject.toml
services/log-processor/src/logprocessor/: __main__.py  logprocessor.py
services/nft-metadata-worker/: Dockerfile  pyproject.toml
services/nft-metadata-worker/src/nftworker/: __init__.py  __main__.py  worker.py
tests/: conftest.py  test_block_processor.py  test_dex_processor.py  test_eip1559.py  test_log_processor.py  test_nft_fetcher.py  test_token_balance.py
