[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-client"
version = "0.1.0"
description = "Ethereum minimal client demo (HTTP and WebSocket)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "web3>=6,<7",
  "websockets>=12,<13",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3"
]

[project.scripts]
eth-client = "eth_client.__main__:main"


