[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "REST API service for Ethereum indexer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0,<4",
  "flask-cors>=4.0,<5",
  "python-dotenv>=1,<2",
  "sqlalchemy>=2.0,<3",
  "psycopg2-binary>=2.9,<3",
  "gunicorn>=21.0,<22",
  "web3>=6,<7",
]

[project.scripts]
api = "api.__main__:main"


[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]


