[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "log-processor"
version = "0.1.0"
description = "Log processor service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "web3>=6,<7",
  "websockets>=12,<13",
  "python-dotenv>=1,<2",
  "psycopg2-binary>=2.9,<3",
  "sqlalchemy>=2.0,<3"
]

[project.scripts]
logprocessor = "logprocessor.__main__:main"


[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["logprocessor*"]


